# fp-learning

./: README.md  pyproject.toml
notebooks/: 01_intro_functional_and_map.ipynb  02_iterables_iterators_lazy.ipynb  03_flatmap_maybe_optional.ipynb  04_function_composition_and_pipeline.ipynb  05_monad_and_container_abstractions.ipynb
src/fp_learning/: __init__.py  assignments_01.py  assignments_02.py  assignments_03.py  assignments_04.py  assignments_05.py
tests/: test_assignments_01.py  test_assignments_02.py  test_assignments_03.py  test_assignments_04.py  test_assignments_05.py
