[project]
name = "fp-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "metbatgui", email = "metbatguidev@gmail.com" }]

requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
